# vcpkg-docs

./: .gitignore  .markdownlint.jsonc  .openpublishing.publish.config.json  .openpublishing.redirection.json  CMakeLists.txt  LICENSE  README.md  my_sample_lib.cpp  my_sample_lib.h  vcpkg-configuration.json  vcpkg.json  zone-pivot-groups.yml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: z-learn-feedback-tool.yml
.github/workflows/: test-registry-ports.yml
cmake/: config.cmake.in
include/: beicode.h  beison.h
includes/: debug.md  env-vars-bash.md  env-vars.md  experimental.md  internal-helper.md  removed.md
ports/beicode/: portfile.cmake  vcpkg.json
ports/beison/: portfile.cmake  vcpkg.json
src/: beicode.cpp  beison.cpp
vcpkg/: TOC.yml  docfx.json  github-integration.md  index.md  index.yml  zone-pivot-groups.json
vcpkg/about/: faq.md  privacy.md
vcpkg/breadcrumb/: toc.yml
vcpkg/commands/: add-version.md  add.md  common-options.md  contact.md  create.md  depend-info.md  edit.md  env.md  export-port.md  export.md  format-feature-baseline.md  format-manifest.md  hash.md  help.md  install.md  integrate.md  license-report.md  lint-port.md  list.md  new.md  owns.md  remove.md  search.md  test-features.md  update-baseline.md  update-registry.md  update.md  upgrade.md  version.md
vcpkg/concepts/: asset-caching.md  build-system-integration.md  classic-mode.md  continuous-integration.md  default-features.md  features.md  glossary.md  manifest-mode.md  offline.md  overlay-ports.md  package-name-resolution.md  port-overlays.md  ports.md  registries.md  supported-hosts.md  system-package-managers.md  triplets.md
vcpkg/consume/: asset-caching.md  binary-caching-default.md  binary-caching-github-actions-cache.md  binary-caching-github-packages.md  binary-caching-local.md  binary-caching-nuget.md  binary-caching-overview.md  binary-caching.md  boost-versions.md  caching-workflow-identity-federation.md  caching-workload-identity-federation.md  classic-mode.md  cpp-cli.md  gha-authentication.md  git-registries.md  install-locally-modified-package.md  lock-package-versions.md  manifest-mode.md  third-party-authentication.md  third-party-authentication.nuget.md
vcpkg/consume/snippets/: versioning-cmakelists.txt  versioning-main.cpp
vcpkg/consuming-packages/: configure-git-authentication-in-github-actions.md  git-authentication-on-github-actions.md
vcpkg/contributing/: cmake-guidelines.md  maintainer-guide.md  pr-review-checklist.md  removed_vcpkg_catalog_release_process.md  removed_vcpkg_tool_release_process.md  vcpkg_catalog_release_process.md  vcpkg_tool_release_process.md
vcpkg/examples/: adding-usage.md  asset-caching-source-nuget.md  assetcaching-script.md  installing-and-using-packages.md  manifest-mode-cmake.md  modify-baseline-to-pin-old-boost.md  packaging-github-repos.md  packaging-zipfiles.md  patching.md  versioning.getting-started.md
vcpkg/examples/manifest-mode-cmake/: CMakeLists.txt  main.cxx
vcpkg/examples/snippets/manifest-mode-cmake/: CMakeLists.txt  vcpkg.json
vcpkg/get_started/: get-started-adding-to-registry.md  get-started-linux.md  get-started-msbuild.md  get-started-packaging.md  get-started-vs.md  get-started-vscode.md  get-started.md  getting-started-msbuild.md  overview.md  setup-vcpkg.md
vcpkg/get_started/includes/: setup-vcpkg.md
vcpkg/maintainers/: authoring-script-ports.md  authoring-tool-ports.md  control-files.md  handling-usage-files.md  publishing-to-a-git-registry.md  registries.md  variables.md
vcpkg/maintainers/functions/: vcpkg_acquire_msys.md  vcpkg_add_to_path.md  vcpkg_apply_patches.md  vcpkg_backup_env_variables.md  vcpkg_backup_restore_env_vars.md  vcpkg_build_cmake.md  vcpkg_build_make.md  vcpkg_build_msbuild.md  vcpkg_build_ninja.md  vcpkg_build_nmake.md  vcpkg_build_qmake.md  vcpkg_buildpath_length_warning.md  vcpkg_check_features.md  vcpkg_check_linkage.md  vcpkg_clean_executables_in_bin.md  vcpkg_clean_msbuild.md  vcpkg_cmake_build.md  vcpkg_cmake_config_fixup.md  vcpkg_cmake_configure.md  vcpkg_cmake_get_vars.md  vcpkg_cmake_install.md  vcpkg_common_definitions.md  vcpkg_configure_cmake.md  vcpkg_configure_gn.md  vcpkg_configure_make.md  vcpkg_configure_meson.md  vcpkg_configure_qmake.md  vcpkg_copy_pdbs.md  vcpkg_copy_tool_dependencies.md  vcpkg_copy_tools.md  vcpkg_download_distfile.md  vcpkg_download_sourceforge.md  vcpkg_execute_build_process.md  vcpkg_extract_archive.md  (+42 more)
vcpkg/produce/: export-compiled-dependencies.md  package-ado-dependency.md  package-ado-repository.md  publish-to-a-git-registry.md  publishing-to-a-git-registry.md  test-registry-ports-ado.md  test-registry-ports-gha.md  update-package-version.md
vcpkg/readme/: vcpkg-README.md  vcpkg-tool-README.md  vcpkg_README.md
vcpkg/reference/: binarycaching.md  installation-tree-layout.md  policies.md  software-bill-of-materials.md  vcpkg-configuration-json.md  vcpkg-json.md
vcpkg/resources/: support-channels.md
vcpkg/troubleshoot/: asset-caching.md  build-failures.md
vcpkg/users/: assetcaching.md  authentication.md  binarycaching-troubleshooting.md  binarycaching.md  classic-mode.md  config-environment.md  github-dependency-graph.md  host-dependencies.md  manifests.md  port-overlays.md  registries.md  selecting-library-features.md  triplets.md  vcpkg-configuration-json.md  vcpkg-json.md  versioning-troubleshooting.md  versioning.concepts.md  versioning.md
versions/: baseline.json
versions/b-/: beicode.json  beison.json
(+25 files in other folders)
